# datasaving

./: .gitignore  CMakeLists.txt  Daily_resume.md  README.md  bandwidthtest  benchmark.md  linux.toolchain.cmake  log.txt  main.cpp  monitorProcess.sh
Docs/: .~lock.Benchmark_1.docx#  Benchmark_1.docx  Flux de données dans le programme d'enregistrement (saving.cpp).docx  Notes concernant le lancement du programme.docx
contextanddevice/: devicemanager.cpp  devicemanager.h
ply/: saving.cpp  saving.h
programoptions/: CMakeLists.txt
programoptions/include/: configuration.hpp  programoptionsconfig.hpp
programoptions/src/: programoptionsconfig.cpp
